@@ -14,11 +14,11 @@ import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
-import java.util.List;
+import java.nio.charset.StandardCharsets;
 import java.util.Optional;
 import java.util.regex.Pattern;
 
-import static com.ssafy.seodangdogbe.word.dto.KorApiDto.*;
+import static com.ssafy.seodangdogbe.word.dto.WordApiDto.*;
 import static com.ssafy.seodangdogbe.word.dto.WordDto.*;
 
 
@@ -42,7 +42,20 @@ public class WordService {
         }
     }
 
-    public boolean isExistWord(String word){
+    public boolean isEng(String word) {
+        String regex = "^[a-zA-Z]*$";
+
+        boolean isEngOnly = Pattern.matches(regex, word);
+        if (isEngOnly) {
+            System.out.println("영어 단어입니다.");
+            return true;
+        } else {
+            System.out.println("영어 단어가 아닙니다.");
+            return false;
+        }
+    }
+
+    public boolean existWord(String word){
         return metaWordRepository.existsByWord(word);
     }
 
@@ -50,24 +63,60 @@ public class WordService {
         return new MetaWordDto(metaWordRepository.findByWord(word).get());
     }
 
-    // 뉴스 상세보기에서 영어 단어 조회
-    public void getEngWord(String word) {
+    // 네이버 백과사전 api
+    public EncycApiDto callNEncycSearchApi(String word) throws Exception {
+        String clientId = "7VXk_gxmrs8uoc2k12bm";
+        String clientSecret = "P3c4RQb6bJ";
+
+        try {   // ** 검색어 인코딩 실패 예외처리
+            String urlBuilder = "https://openapi.naver.com/v1/search/encyc.json"
+                    + "?query=" + URLEncoder.encode(word, StandardCharsets.UTF_8)
+                    + "&display=10&start=1&sort=sim";
+
+
+            URL url = new URL(urlBuilder);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();  // ** api 예외처리
+
+            // Request 형식 설정
+            conn.setRequestMethod("GET");
+            conn.setRequestProperty("Content-Type", "application/json");
+            conn.setRequestProperty("X-Naver-Client-Id", clientId);
+            conn.setRequestProperty("X-Naver-Client-Secret", clientSecret);
+
+            // 응답 데이터 받아오기
+            BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream(), "UTF-8"));
+
+            StringBuilder result = new StringBuilder();
+
+            String line;
+            while ((line = br.readLine()) != null){
+                result.append(line);
+            }
+            br.close();
+            conn.disconnect();
+
+            if (result.isEmpty())
+                return null;
+            else
+                return JsonConverter.apiJsonToEncycApiDto(result.toString());
+        } catch (Exception e) {
+            e.printStackTrace();
+            throw new RuntimeException(e);
+        }
+
     }
 
     // 표준국어대사전 검색 OpenAPI
     public KorApiSearchDto callStDictSearchApi(String word) throws Exception {
         String key = "EFAB63B197416ACEB79CFBC56E615EE2";
 
-        StringBuffer result = new StringBuffer();
-        String strResult = "";
         try {
-            StringBuilder urlBuilder = new StringBuilder("https://stdict.korean.go.kr/api/search.do");
-            urlBuilder.append("?key="+key);
-            urlBuilder.append("&q="+ URLEncoder.encode(word, "UTF-8"));
-            urlBuilder.append("&req_type=json");
+            String urlBuilder = "https://stdict.korean.go.kr/api/search.do" + "?key=" + key +
+                    "&q=" + URLEncoder.encode(word, StandardCharsets.UTF_8) +
+                    "&req_type=json";
 
-            URL url = new URL(urlBuilder.toString());
-            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            URL url = new URL(urlBuilder);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();  // ** api 예외처리
 
             // Request 형식 설정
             conn.setRequestMethod("GET");
@@ -76,26 +125,32 @@ public class WordService {
             // 응답 데이터 받아오기
             BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream(), "UTF-8"));
 
+            StringBuilder result = new StringBuilder();
+
             String line;
             while ((line = br.readLine()) != null){
                 result.append(line);
             }
             br.close();
             conn.disconnect();
-            strResult = result.toString();
 
-            KorApiSearchDto korApiSearchDto = JsonConverter.apiJsonToKorApiSearchDto(strResult);
-
-            return korApiSearchDto;
+            if (result.isEmpty())
+                return null;
+            else
+                return JsonConverter.apiJsonToKorApiSearchDto(result.toString());
         } catch (Exception e) {
             e.printStackTrace();
             throw new RuntimeException(e);
         }
     }
 
-    public MetaWord saveMetaWordToMongodb(MetaWordDto metaWordDto){
+    // api 호출 및 결과값 받아오기
+
+
+    // mongodb에 MetaWord 저장
+    public void saveMetaWordToMongodb(MetaWordDto metaWordDto){
         MetaWord metaWord = new MetaWord(metaWordDto);
-        return metaWordRepository.save(metaWord);
+        metaWordRepository.save(metaWord);
     }
 
 
